[gd_scene load_steps=10 format=2]

[ext_resource path="res://GUI/OptionsSections/OptionsMain.gd" type="Script" id=1]
[ext_resource path="res://GUI/OptionsSections/DarkerPanel.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Fonts/m5x7_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/Buttons/OptionsToggle.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/Buttons/OptionsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Fonts/m5x7_16.tres" type="DynamicFont" id=6]
[ext_resource path="res://GUI/Buttons/OptionsSlider.tscn" type="PackedScene" id=7]
[ext_resource path="res://GUI/OptionsSections/Languages.gd" type="Script" id=8]
[ext_resource path="res://GUI/Buttons/DefaultButton.tscn" type="PackedScene" id=9]

[node name="Main" type="VBoxContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 172.0
custom_constants/separation = 1
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 304.0
margin_bottom = 119.0
rect_min_size = Vector2( 0, 106 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_right = 150.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Resolution" type="Label" parent="HBoxContainer/Panel/VBoxContainer"]
margin_right = 150.0
margin_bottom = 26.0
size_flags_horizontal = 5
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Resolution"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel/VBoxContainer"]
margin_left = 29.0
margin_top = 30.0
margin_right = 121.0
margin_bottom = 86.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 88.0
margin_bottom = 56.0
size_flags_vertical = 3

[node name="Fullscreen" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 88.0
margin_bottom = 16.0

[node name="Borderless" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 20.0
margin_right = 88.0
margin_bottom = 36.0
text = "Borderless"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 88.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScaleDown" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_right = 16.0
margin_bottom = 16.0

[node name="Label" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ScaleDown" index="0"]
text = "-"

[node name="Scale" type="Label" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_top = 1.0
margin_right = 68.0
margin_bottom = 14.0
rect_min_size = Vector2( 48, 0 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 6 )
text = "Scale"
align = 1

[node name="ScaleUp" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 72.0
margin_right = 88.0
margin_bottom = 16.0

[node name="Margin" type="Control" parent="HBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 92.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel2" type="Panel" parent="HBoxContainer"]
editor/display_folded = true
margin_left = 154.0
margin_right = 304.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Volume" type="Label" parent="HBoxContainer/Panel2/VBoxContainer"]
margin_right = 150.0
margin_bottom = 26.0
size_flags_horizontal = 5
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Volume"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel2/VBoxContainer"]
margin_top = 30.0
margin_right = 150.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_left = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_right = 146.0
margin_bottom = 89.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 141.0
margin_bottom = 89.0
size_flags_horizontal = 3

[node name="Master" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_right = 141.0
size_flags_horizontal = 3

[node name="HSlider" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Master" index="1"]
margin_right = 141.0

[node name="Music" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 17.0
margin_right = 141.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="ScaleName" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Music" index="0"]
text = "Music"

[node name="HSlider" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Music" index="1"]
margin_right = 141.0

[node name="AudioStreamPlayer" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Music" index="2"]
bus = "Music"

[node name="SFX" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 34.0
margin_right = 141.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="ScaleName" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/SFX" index="0"]
text = "SFX"

[node name="HSlider" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/SFX" index="1"]
margin_right = 141.0

[node name="AudioStreamPlayer" parent="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/SFX" index="2"]
bus = "SFX"

[node name="Panel3" type="Panel" parent="HBoxContainer"]
editor/display_folded = true
visible = false
margin_left = 204.0
margin_right = 304.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Languages" type="Label" parent="HBoxContainer/Panel3/VBoxContainer"]
margin_right = 108.0
margin_bottom = 26.0
size_flags_horizontal = 5
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Languages"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel3/VBoxContainer"]
margin_top = 30.0
margin_right = 108.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 5
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel3/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 4.0
margin_right = 104.0
margin_bottom = 85.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 120.0
margin_right = 304.0
margin_bottom = 164.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 123.0
margin_right = 181.0
margin_bottom = 44.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 1

[node name="Languages" parent="MarginContainer/VBoxContainer" instance=ExtResource( 9 )]
margin_right = 58.0
margin_bottom = 14.0
text = "Languages"

[node name="Controls" parent="MarginContainer/VBoxContainer" instance=ExtResource( 9 )]
margin_top = 15.0
margin_right = 58.0
margin_bottom = 29.0
text = "Controls"

[node name="Back" parent="MarginContainer/VBoxContainer" groups=[
"FocusGroup",
"OptionsMain",
] instance=ExtResource( 9 )]
margin_top = 30.0
margin_right = 58.0
margin_bottom = 44.0
text = "Back"
[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Borderless" to="." method="_on_Borderless_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ScaleDown" to="." method="_on_ScaleDown_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ScaleUp" to="." method="_on_ScaleUp_pressed"]
[connection signal="value_changed" from="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Master/HSlider" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Music/HSlider" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/SFX/HSlider" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Languages" to="." method="_on_Languages_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]

[editable path="HBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ScaleDown"]

[editable path="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Master"]

[editable path="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Music"]

[editable path="HBoxContainer/Panel2/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/SFX"]
